web/book/tests/documentation/snapshots/documentation__book__reference__syntax__s-strings__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from my_table\nselect db_version = s\"version()\"\n"
---
SELECT
  version() AS db_version
FROM
  my_table

