web/book/tests/documentation/snapshots/documentation__book__reference__syntax__s-strings__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\naggregate {average salary}\n"
---
SELECT
  AVG(salary)
FROM
  employees

