web/book/tests/documentation/snapshots/documentation__book__reference__syntax__s-strings__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from de=dept_emp\njoin s=salaries side:left (s.emp_no == de.emp_no && s\"\"\"\n  ({s.from_date}, {s.to_date})\n  OVERLAPS\n  ({de.from_date}, {de.to_date})\n\"\"\")\n"
---
SELECT
  de.*,
  s.*
FROM
  dept_emp AS de
  LEFT JOIN salaries AS s ON s.emp_no = de.emp_no
  AND (s.from_date, s.to_date) OVERLAPS (de.from_date, de.to_date)
