web/book/tests/documentation/snapshots/documentation__book__reference__syntax__s-strings__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "from s\"SELECT DISTINCT ON (first_name) first_name, id, age FROM employees ORDER BY first_name, age ASC\"\njoin s = s\"SELECT * FROM salaries\" (==id)\n"
---
WITH
table_0 AS (
  SELECT DISTINCT
    ON (first_name) first_name,
    id,
    age
  FROM
    employees
  ORDER BY
    first_name,
    age ASC
),
table_1 AS (
  SELECT
    *
  FROM
    salaries
)
SELECT
  table_0.id,
  table_0.first_name,
  table_0.age,
  table_1.*
FROM
  table_0
  INNER JOIN table_1 ON table_0.id = table_1.id
